test/e2e/fail/008-duplicate-type/input.tjs
type Pair<A, B> = { first: A, second: B };

type Pair<A, B> = { first: A, second: B };
